--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/style.css">
     <title>Code Quiz</title>
 </head>
 <body>
     <a id="highscores" href=./index2.html> View Highscores </a>
-    <p id="time">Time: <span id="timer"> </span></p>
+    <p id="time">Time Left: <span id="timer"> </span></p>
 
     <h1>
         Coding Quiz Challenge
     </h1>
     
-    <h2>Try to answer the following code related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds! </h2>
+    <h3>Try to answer the following code related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds! </h2>
 
-    <button id="startquiz"> Start Quiz</button>
+    <button id="startquiz" class="button"> Start Quiz</button>
 
     <script src="Assets/script.js"> </script>
 
